fix:fix status code

--- a/400.html
+++ b/400.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bad Request</title>
+    <link rel="stylesheet" href="static/styles.css">
+    <script defer src="https://unpkg.com/htmx.org@1.7.0"></script>
 </head>
 <body>
-    <div id="result">
-        {{.Result}}
+    <div class="container">
+        <header>
+            <h1>Error: Bad Request</h1>
+        </header>
+        <main>
+            <p>{{.Result}}</p>
+            <a href="/" class="btn">Go Back</a>
+        </main>
     </div>
-    
+    <footer>
+        <p>@Zone01 Kisumu</p>
+    </footer>
 </body>
 </html>
