--- a/indext.html
+++ b/indext.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASCII ART WEB</title>
     <link rel="stylesheet" href="static/styles.css">
-    <script defer src="https://unpkg.com/htmx.org"></script>
+    <script defer src="https://unpkg.com/htmx.org@1.7.0"></script>
 </head>
 <body>
     <div class="container">
