--- a/asciipage.html
+++ b/asciipage.html
@@ -3,7 +3,7 @@
     <head>
         <title>asciipage</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script defer src="https://unpkg.com/htmx.org"></script>
+        <script defer src="https://unpkg.com/htmx.org@1.7.0"></script>
 
         <style>
         .asciidisplay {
