update:update the 400.html to htmx page

--- a/400.html
+++ b/400.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Request</title>
-    <link rel="stylesheet" href="static/styles.css">
-    <script defer src="https://unpkg.com/htmx.org@1.7.0"></script>
+  <!-- <link rel="stylesheet" href="static/styles.css"> -->
+   <script defer src="https://unpkg.com/htmx.org@1.7.0"></script>
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Error: Bad Request</h1>
+        <header hx-get="/400/badrequest" hx-target="body" hx-trigger="load">
+            <h1 style="color: black;">Error: Bad Request</h1>
         </header>
         <main>
-            <p>{{.Result}}</p>
-            <a href="/" class="btn">Go Back</a>
+          
         </main>
     </div>
-    <footer>
-        <p>@Zone01 Kisumu</p>
-    </footer>
+    
 </body>
 </html>
