update:update index.html

--- a/indext.html
+++ b/indext.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASCII ART WEB</title>
     <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="static/400.css">
+ <link rel="stylesheet" href="static/500.css">
+
     <script defer src="https://unpkg.com/htmx.org@1.7.0"></script>
 </head>
 <body>
