update:update style for bad request and ineternal error

--- a/400.html
+++ b/400.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Request</title>
-  <!-- <link rel="stylesheet" href="static/styles.css"> -->
-   <script defer src="https://unpkg.com/htmx.org@1.7.0"></script>
-</head>
-<body>
-    <div class="container">
-        <header hx-get="/400/badrequest" hx-target="body" hx-trigger="load">
-            <h1 style="color: black;">Error: Bad Request</h1>
-        </header>
-        <main>
-          
-        </main>
-    </div>
+    <script defer src="https://unpkg.com/htmx.org@1.7.0"></script>
     
+</head>
+<body id="body400">
+    <div hx-get="/400/badrequest" hx-target="body" hx-trigger="load" id="containers">
+        <div   id="errortext">
+            <h1 style="color: #dc3545;">Error: Bad Request</h1>
+            <p class="lead">Sorry, the request could not be processed.</p>
+        </div>
+    </div>
 </body>
 </html>
