update:query media upddate

--- a/indext.html
+++ b/indext.html
@@ -39,6 +39,7 @@
 
             <section class="contributors">
                 <h2>CONTRIBUTORS:</h2>
+                <div class="displaypic">
                 <div class="contributor">
                     <img src="https://learn.zone01kisumu.ke/git/avatars/fb9713e670165fd5fc7536ccc10a6c8d?size=870">
                     <p><a href="https://learn.zone01kisumu.ke/git/tesiaka">tesiaka</a></p>
@@ -50,6 +51,7 @@
                 <div class="contributor">
                     <img src="https://learn.zone01kisumu.ke/git/avatars/cf0006d1b23256772956a4629c7a25a1?size=870">
                     <p><a href="https://learn.zone01kisumu.ke/git/viarony">viarony</a></p>
+                </div>
                 </div>
             </section>
         </section>
