update:insert required in the webpage

--- a/indext.html
+++ b/indext.html
@@ -20,7 +20,7 @@
        
             <form class="input-section" hx-post="/asciihandler" hx-target="#result" hx-swap="innerHTML">
                 <h2>Input text here</h2>
-                <textarea id="input-text" name="input-text" placeholder="Type here........"></textarea>
+                <textarea id="input-text" name="input-text" placeholder="Type here........" required></textarea>
                 <div class="buttons">
                     <div class="dropdown">
                         <select class="dropdown-btn" id="Banner" name="Banner">
