--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404: Page not found</title>
-    <link rel="stylesheet" href="static/404.css" />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="static/404.css" />
   </head>
   <body>
     <section class="page_404">
@@ -21,7 +21,7 @@
                 <h1 class="text-center">404</h1>
               </div>
               <div class="contant_box_404">
-                <h3 class="h2">Look like you're lost</h3>
+                <h3 class="h2">It Looks like you're lost</h3>
                 <p>the page you are looking for not avaible!</p>
                 <a href="/" class="link_404">Go to Home</a>
               </div>
