fix:update on style print

--- a/asciipage.html
+++ b/asciipage.html
@@ -20,7 +20,7 @@
         </style>
     </head>
     <body>
-        <div class="asciidisplay">
+        <div class="asciidisplay" style="text-align: justify;">
             <pre>{{.Result}}</pre>
         </div>
     </body>
