style&fix:style the links and fix missing template error

--- a/indext.html
+++ b/indext.html
@@ -42,15 +42,15 @@
                 <div class="displaypic">
                 <div class="contributor">
                     <img src="https://learn.zone01kisumu.ke/git/avatars/fb9713e670165fd5fc7536ccc10a6c8d?size=870">
-                    <p><a href="https://learn.zone01kisumu.ke/git/tesiaka">tesiaka</a></p>
+                    <button style="background-color: #e94560;"><a href="https://learn.zone01kisumu.ke/git/tesiaka" style="text-decoration: none; color: white;">tesiaka</a></button>
                 </div>
                 <div class="contributor">
-                    <img src="https://learn.zone01kisumu.ke/git/avatars/8d298bcc662dd253ab4426515673269d?size=870">
-                    <p><a href="https://learn.zone01kisumu.ke/git/jerootieno">jerootieno</a></p>
+                    <img src="https://learn.zone01kisumu.ke/git/avatars/27e7d22c36267615242d9bc4a275d831?size=870">
+                    <button style="background-color: #e94560;"><a href="https://learn.zone01kisumu.ke/git/jerootieno" style="text-decoration: none;color: white;">jerootieno</a></button>
                 </div>
                 <div class="contributor">
                     <img src="https://learn.zone01kisumu.ke/git/avatars/cf0006d1b23256772956a4629c7a25a1?size=870">
-                    <p><a href="https://learn.zone01kisumu.ke/git/viarony">viarony</a></p>
+                    <button style="background-color: #e94560;"><a href="https://learn.zone01kisumu.ke/git/viarony" style="text-decoration: none;color: white;">viarony</a></button>
                 </div>
                 </div>
             </section>
